--- a/index.html
+++ b/index.html
@@ -90,7 +90,77 @@ body {
   }
 }
 
-/* Login Screen */
+/* Mobile responsive classifica */
+@media (max-width: 767px) {
+  .standing-header {
+    font-size: 10px;
+    padding: 12px 8px;
+    letter-spacing: 0.5px;
+    margin-bottom: 5px;
+  }
+  
+  .standing-stats-header {
+    width: 260px !important;
+    justify-content: space-between;
+  }
+  
+  .standing-stat-header {
+    width: 24px !important;
+    min-width: 24px;
+    font-size: 10px;
+  }
+  
+  .standing-diff-header {
+    width: 32px !important;
+    min-width: 32px;
+    font-size: 10px;
+  }
+  
+  .standing-points-header {
+    width: 40px !important;
+    min-width: 40px;
+    font-size: 10px;
+  }
+  
+  .standing-row {
+    padding: 14px 8px;
+    font-size: 12px;
+  }
+  
+  .standing-stats {
+    width: 260px !important;
+  }
+  
+  .standing-stat {
+    width: 24px !important;
+    min-width: 24px;
+    font-size: 13px;
+  }
+  
+  .standing-diff {
+    width: 32px !important;
+    min-width: 32px;
+    font-size: 13px;
+    padding: 4px 2px;
+  }
+  
+  .standing-points {
+    width: 40px !important;
+    min-width: 40px;
+    font-size: 16px;
+    padding: 6px 2px;
+  }
+  
+  .standing-team-name {
+    font-size: 13px;
+  }
+  
+  .standing-pos {
+    font-size: 15px;
+  }
+}
+
+/* Login Screen - ANIMAZIONE AGGIUNTA */
 .login-screen {
   position: fixed;
   top: 0;
@@ -102,8 +172,44 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  background-image: radial-gradient(circle at 20% 80%, rgba(0, 212, 170, 0.1) 0%, transparent 50%),
-                    radial-gradient(circle at 80% 20%, rgba(17, 138, 178, 0.1) 0%, transparent 50%);
+  background-image: 
+    radial-gradient(circle at 20% 80%, rgba(0, 212, 170, 0.1) 0%, transparent 50%),
+    radial-gradient(circle at 80% 20%, rgba(17, 138, 178, 0.1) 0%, transparent 50%);
+  animation: loginBackgroundFlow 20s ease-in-out infinite alternate;
+  overflow: hidden;
+}
+
+@keyframes loginBackgroundFlow {
+  0% {
+    background-image: 
+      radial-gradient(circle at 20% 80%, rgba(0, 212, 170, 0.15) 0%, transparent 50%),
+      radial-gradient(circle at 80% 20%, rgba(17, 138, 178, 0.15) 0%, transparent 50%);
+    background-position: 20% 80%, 80% 20%;
+  }
+  25% {
+    background-image: 
+      radial-gradient(circle at 40% 20%, rgba(0, 212, 170, 0.2) 0%, transparent 50%),
+      radial-gradient(circle at 60% 80%, rgba(17, 138, 178, 0.2) 0%, transparent 50%);
+    background-position: 40% 20%, 60% 80%;
+  }
+  50% {
+    background-image: 
+      radial-gradient(circle at 80% 50%, rgba(0, 212, 170, 0.15) 0%, transparent 50%),
+      radial-gradient(circle at 20% 50%, rgba(17, 138, 178, 0.15) 0%, transparent 50%);
+    background-position: 80% 50%, 20% 50%;
+  }
+  75% {
+    background-image: 
+      radial-gradient(circle at 60% 40%, rgba(0, 212, 170, 0.2) 0%, transparent 50%),
+      radial-gradient(circle at 40% 60%, rgba(17, 138, 178, 0.2) 0%, transparent 50%);
+    background-position: 60% 40%, 40% 60%;
+  }
+  100% {
+    background-image: 
+      radial-gradient(circle at 30% 70%, rgba(0, 212, 170, 0.15) 0%, transparent 50%),
+      radial-gradient(circle at 70% 30%, rgba(17, 138, 178, 0.15) 0%, transparent 50%);
+    background-position: 30% 70%, 70% 30%;
+  }
 }
 
 .login-card {
@@ -116,11 +222,41 @@ body {
   border: 1px solid rgba(0, 212, 170, 0.2);
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
   text-align: center;
+  animation: loginCardAppear 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transform-origin: center;
+}
+
+@keyframes loginCardAppear {
+  0% {
+    opacity: 0;
+    transform: translateY(30px) scale(0.9);
+  }
+  70% {
+    opacity: 1;
+    transform: translateY(-10px) scale(1.02);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
 }
 
 .login-logo {
   font-size: 48px;
   margin-bottom: 10px;
+  animation: logoFloat 3s ease-in-out infinite alternate;
+}
+
+@keyframes logoFloat {
+  0% {
+    transform: translateY(0) rotate(0deg);
+  }
+  50% {
+    transform: translateY(-10px) rotate(5deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0deg);
+  }
 }
 
 .login-card h2 {
@@ -128,6 +264,20 @@ body {
   font-weight: 700;
   font-size: 28px;
   color: var(--text);
+  background: linear-gradient(90deg, #00d4aa, #118ab2, #9d4edd);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  animation: titleGlow 2s ease-in-out infinite alternate;
+}
+
+@keyframes titleGlow {
+  0% {
+    filter: drop-shadow(0 0 5px rgba(0, 212, 170, 0.3));
+  }
+  100% {
+    filter: drop-shadow(0 0 15px rgba(0, 212, 170, 0.5));
+  }
 }
 
 .login-card input {
@@ -140,12 +290,34 @@ body {
   font-size: 16px;
   margin-bottom: 20px;
   transition: all 0.3s ease;
+  animation: inputSlideIn 0.5s ease-out backwards;
+}
+
+.login-card input:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.login-card input:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+@keyframes inputSlideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .login-card input:focus {
   outline: none;
   border-color: var(--accent);
-  box-shadow: 0 0 0 3px rgba(0, 212, 170, 0.1);
+  box-shadow: 0 0 0 3px rgba(0, 212, 170, 0.1),
+              0 0 20px rgba(0, 212, 170, 0.2);
+  transform: translateY(-2px);
 }
 
 .login-card button {
@@ -153,18 +325,48 @@ body {
   padding: 16px;
   border-radius: 12px;
   border: none;
-  background: var(--accent);
+  background: linear-gradient(90deg, var(--accent), var(--accent-dark));
   color: black;
   font-weight: 900;
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease;
   margin-top: 10px;
+  animation: buttonAppear 0.5s ease-out backwards;
+  animation-delay: 0.4s;
+  position: relative;
+  overflow: hidden;
+}
+
+@keyframes buttonAppear {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.login-card button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+  transition: left 0.7s ease;
 }
 
 .login-card button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 30px rgba(0, 212, 170, 0.3);
+  transform: translateY(-3px);
+  box-shadow: 0 15px 40px rgba(0, 212, 170, 0.4);
+}
+
+.login-card button:hover::before {
+  left: 100%;
 }
 
 .login-hint {
@@ -172,6 +374,67 @@ body {
   color: var(--muted);
   margin-top: 20px;
   line-height: 1.5;
+  animation: hintFadeIn 0.5s ease-out backwards;
+  animation-delay: 0.6s;
+}
+
+@keyframes hintFadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Animazione quando la password field appare */
+@keyframes passwordFieldAppear {
+  0% {
+    opacity: 0;
+    height: 0;
+    margin-bottom: 0;
+  }
+  100% {
+    opacity: 1;
+    height: auto;
+    margin-bottom: 20px;
+  }
+}
+
+.login-card input[type="password"] {
+  animation: passwordFieldAppear 0.3s ease-out forwards;
+}
+
+/* Pulsanti animati nel login */
+.login-pulse {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: var(--accent);
+  border-radius: 50%;
+  margin: 0 5px;
+  animation: pulseDots 1.4s infinite ease-in-out both;
+}
+
+.login-pulse:nth-child(1) {
+  animation-delay: -0.32s;
+}
+
+.login-pulse:nth-child(2) {
+  animation-delay: -0.16s;
+}
+
+@keyframes pulseDots {
+  0%, 80%, 100% {
+    transform: scale(0);
+    opacity: 0.5;
+  }
+  40% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 /* Header */
@@ -217,6 +480,18 @@ header {
   height: 8px;
   background: #00d4aa;
   border-radius: 50%;
+  animation: livePulse 1.5s infinite;
+}
+
+@keyframes livePulse {
+  0%, 100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.7;
+  }
 }
 
 .refresh-btn {
@@ -740,6 +1015,14 @@ button.danger:hover {
 
 .standing-stat-header {
   width: 30px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.standing-diff-header {
+  width: 40px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -1386,7 +1669,7 @@ button.danger:hover {
             <div class="standing-stat-header">P</div>
             <div class="standing-stat-header">GF</div>
             <div class="standing-stat-header">GS</div>
-            <div class="standing-stat-header">DR</div>
+            <div class="standing-diff-header">DR</div>
             <div class="standing-points-header">PTS</div>
           </div>
         </div>
@@ -2025,7 +2308,20 @@ function renderTeams() {
     return;
   }
   
-  teamsData.forEach(team => {
+  // ORDINA LE SQUADRE IN ORDINE ALFABETICO
+  const sortedTeams = [...teamsData].sort((a, b) => {
+    // Prima le squadre riserve in fondo
+    const aIsReserve = a.isReserveTeam || a.name.toLowerCase().includes('riserve') || a.name.toLowerCase().includes('riserva');
+    const bIsReserve = b.isReserveTeam || b.name.toLowerCase().includes('riserve') || b.name.toLowerCase().includes('riserva');
+    
+    if (aIsReserve && !bIsReserve) return 1;
+    if (!aIsReserve && bIsReserve) return -1;
+    
+    // Poi ordine alfabetico
+    return a.name.localeCompare(b.name);
+  });
+  
+  sortedTeams.forEach(team => {
     const teamCard = document.createElement('div');
     teamCard.className = 'teamCard';
     teamCard.style.borderLeftColor = team.color;
@@ -2988,7 +3284,7 @@ function renderClassifica() {
     noteDiv.innerHTML = `
       <div style="display: flex; align-items: center; justify-content: center; gap: 8px">
         <span>⚠️</span>
-        <span>La squadra "${reserveTeams[0].name}" è esclusa dalla classifica in quanto squadra riserve</span>
+        <span>Le squadre riserve sono esclusa dalla classifica</span>
       </div>
     `;
     table.appendChild(noteDiv);
